fixed a bug where if a message began with a #hashtag the rest of the message after the hashtag would be cut off. Also set focus on new tweet input once handle is set.

--- a/css/twittler.css
+++ b/css/twittler.css
@@ -12,9 +12,15 @@ body {
   text-align: center;
   margin-bottom: 10px;
 }
+#birdObject:hover {
+  transform:rotate(-3deg);
+  -ms-transform:rotate(-3deg); /* IE 9 */
+  -webkit-transform:rotate(-3deg); /* Opera, Chrome, and Safari */
+}
 #birdObject {
   width: 55%;
   height: 60px;
+
 }
 
 /* compose tweet container */
